[package]
name = "freenet-scaffold-macro"
version = "0.2.1"
edition = "2021"
license = "LGPL-2.1-only"
description = "A macro to support the creation of Freenet contracts"
repository = "https://github.com/freenet/freenet-scaffold-macro"
homepage = "https://freenet.org/"

[lib]
proc-macro = true

[dependencies]
# Proc macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
